# concert-checker

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
agents/: __init__.py  artist_website_finder.py
app/: admin.py  crud.py  main.py  models.py  schemas.py
common/: constants.py  dataclasses.py  utils.py
concert_checker/: main.py
concert_checker/agents/: artist_website_finder.py
concert_checker/app/: admin.py  crud.py  database.py  main.py  models.py
concert_checker/common/: constants.py
concert_checker/sources/: __init__.py  artist_website.py  email.py  songkick.py
concert_checker/tools/: __init__.py  db.py  email.py  web.py
debug/: docker.py
scripts/: scraper-loop.sh
sources/: __init__.py  artist_email.py  artist_newsletter.py  artist_website.py  email.py  songkick.py
tests/integration/: test_email.py
tools/: db.py  email.py  web.py
utils/: __init__.py  artist.py
