[project]
name = "concert-checker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crawl4ai>=0.8.0",
    "ipdb>=0.13.13",
    "logfire>=2.8.1",
    "pydantic-ai>=1.57.0",
    "pydantic-ai-slim[duckduckgo,logfire]>=1.57.0",
]
